Fixed navi menu overflow.

--- a/client/app/ctrl-panel/ctrlPanel.less
+++ b/client/app/ctrl-panel/ctrlPanel.less
@@ -42,6 +42,10 @@
   flex: none;
 }
 
+#navi-lst {
+  width: 20rem;
+}
+
 #user-section {
   padding-right: 5px;
   flex: none;
